# json-gen-c

./: .clang-format  .gitignore  BUILD_SYSTEM.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  annotated.html  annotated_dup.js  build.mk  cbor__codec_8c.html  cbor__codec_8c__incl.map  cbor__codec_8c__incl.md5  cbor__codec_8h.html  cbor__codec_8h.js  cbor__codec_8h__incl.map  cbor__codec_8h__incl.md5  cbor__codec_8h_source.html  classes.html  compat_8h.html  compat_8h__dep__incl.map  compat_8h__dep__incl.md5  compat_8h__incl.map  compat_8h__incl.md5  compat_8h_source.html  compat__check_8c.html  compat__check_8c.js  compat__check_8c__incl.map  compat__check_8c__incl.md5  compat__check_8h.html  compat__check_8h.js  compat__check_8h__dep__incl.map  compat__check_8h__dep__incl.md5  compat__check_8h__incl.map  compat__check_8h__incl.md5  compat__check_8h_source.html  diag_8c.html  diag_8c.js  diag_8c__incl.map  diag_8c__incl.md5  (+373 more)
.github/workflows/: doxygen.yml  packaging.yml  release.yml  test.yml
benchmark/: .gitignore  Makefile  RESULTS.md  bench_jansson.cc  bench_jsonc.cc  bootstrap_deps.sh  json_bench.cc  structs.json-gen-c
cmake/: JsonGenCConfig.cmake.in  JsonGenCMacro.cmake  xxd.cmake
doc/: Doxyfile  README_cn.md  copy-move-proposal.md  header.html  json-gen-c.1  schema-evolution.md
docs/: GETTING_STARTED.md  IMPROVEMENTS.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
editors/vscode/syntaxes/: json-gen-c.tmLanguage.json
example/: Makefile  example.json-gen-c  example_D.json-gen-c  example_main.c
example/advanced/: .gitignore  Makefile  advanced.json-gen-c  advanced_main.c
fuzz/: Makefile  fuzz.json-gen-c  fuzz_json_unmarshal.c  fuzz_schema_parser.c
fuzz/corpus/json/: valid_full.json
fuzz/corpus/schema/: inner.jsongen  test.jsongen
makes/: build-dirlib.make
packaging/aur/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/homebrew/: json-gen-c.rb
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js
src/compat/: compat_check.c  compat_check.h
src/gencode/: Makefile  gencode.c  gencode.h  gencode_cbor.c  gencode_cpp.c  gencode_go.c  gencode_msgpack.c  gencode_rust.c
src/gencode/codes/: cbor_codec.c  cbor_codec.h  json_parse.c  json_parse.h  msgpack_codec.c  msgpack_codec.h
src/lsp/: lsp_jsonrpc.c  lsp_jsonrpc.h  lsp_server.c  lsp_server.h
src/main/: Makefile  main.c
src/struct/: Makefile  struct_parse.c  struct_parse.h
src/utils/: Makefile  compat.h  diag.c  diag.h  error_codes.c  error_codes.h  getopt_compat.c  getopt_compat.h  hash.c  hash.h  hash_map.c  hash_map.h  io.c  io.h  json_context.c  json_context.h  sstr.c  sstr.h
test/: .gitignore  Makefile  alias_test.cc  allocator_test.cc  bugfix_empty_enum.json-gen-c  bugfix_include_before_struct.json-gen-c  bugfix_include_enum.json-gen-c  bugfix_off_by_one.json-gen-c  cbor_test.cc  compat_check_test.cc  comprehensive_test.cc  copy_move_test.cc  cpp_wrapper_test.cc  default_value_test.cc  diagnostic_test.cc  edge_case_test.cc  empty_array_bugfix_test.cc  enhanced_test.cc  enum_test.cc  fixed_array_test.cc  hash_map_test.cc  include_enum_inner.json-gen-c  json_gen_c.gen.hpp  lsp_test.py  malformed_c_keyword_field.json-gen-c  malformed_circular_include_a.json-gen-c  malformed_circular_include_b.json-gen-c  malformed_default_bad_enum.json-gen-c  malformed_default_on_array.json-gen-c  malformed_default_on_map.json-gen-c  malformed_default_on_struct.json-gen-c  malformed_duplicate_enum.json-gen-c  malformed_duplicate_enum_value.json-gen-c  malformed_duplicate_field.json-gen-c  malformed_duplicate_struct.json-gen-c  malformed_enum_no_brace.json-gen-c  malformed_enum_no_name.json-gen-c  malformed_oneof_duplicate_name.json-gen-c  malformed_oneof_duplicate_variant.json-gen-c  malformed_oneof_unknown_variant_type.json-gen-c  (+24 more)
test/go_test/: gen_test.go  go.mod
test/rust_test/: Cargo.toml
test/rust_test/src/: gen.rs  main.rs
